[tool.poetry]
name = "aws-coco"
version = "0.1.0"
description = "A utility for managing AWS Console Sessions with Firefox Containers"
authors = ["Joe Snell <joepsnell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
