[tool.poetry]
name = "aws-coco"
version = "0.1.0"
description = "A utility for managing AWS Console Sessions with Firefox Containers"
authors = ["Joe Snell <joepsnell@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.10"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
black = "^20.8b1"

[tool.poetry.scripts]
coco = "aws_coco.main:run"

[tool.poetry.urls]
issues = "https://github.com/wulfmann/aws-coco/issues"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

